# File_Compressor

./: .gitignore  CMakeLists.txt  README.md  compressed.lzw  decompressed.txt  document.huff
FileCompressorGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Huffman.hpp  LZW.hpp  Utils.hpp
src/: Huffman.cpp  LZW.cpp  main.cpp
